[tool.poetry]
name = "star-travel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "star_travel"}]

[tool.poetry.dependencies]
python = "^3.10"
dearpygui = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
